Andromeda scheme added. colorScheme, useAcrylic and acrylicOpacity changed

--- a/windows/settings.json
+++ b/windows/settings.json
@@ -7,14 +7,13 @@
 // For documentation on these settings, see: https://aka.ms/terminal-documentation
 {
     "$schema": "https://aka.ms/terminal-profiles-schema",
-
     "defaultProfile": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
 
     // You can add more global application settings here.
     // To learn more about global settings, visit https://aka.ms/terminal-global-settings
 
     // If enabled, selections are automatically copied to your clipboard.
-    "copyOnSelect": false,
+    "copyOnSelect": true,
 
     // If enabled, formatted data is also copied to your clipboard
     "copyFormatting": false,
@@ -28,8 +27,11 @@
         "defaults":
         {
             // Put settings here that you want to apply to all profiles.
-	    	"fontFace": "CaskaydiaCove Nerd Font",
+		"fontFace": "CaskaydiaCove Nerd Font",
 		"fontSize": 14,
+		"colorScheme": "Andromeda",
+		"useAcrylic": true,
+  		"acrylicOpacity": 0.7
         },
         "list":
         [
@@ -66,7 +68,29 @@
 
     // Add custom color schemes to this array.
     // To learn more about color schemes, visit https://aka.ms/terminal-color-schemes
-    "schemes": [],
+    "schemes": [
+		{
+  		"name": "Andromeda",
+  		"black": "#000000",
+ 		"red": "#cd3131",
+  		"green": "#05bc79",
+  		"yellow": "#e5e512",
+  		"blue": "#2472c8",
+  		"purple": "#bc3fbc",
+  		"cyan": "#0fa8cd",
+  		"white": "#e5e5e5",
+  		"brightBlack": "#666666",
+  		"brightRed": "#cd3131",
+  		"brightGreen": "#05bc79",
+  		"brightYellow": "#e5e512",
+  		"brightBlue": "#2472c8",
+  		"brightPurple": "#bc3fbc",
+  		"brightCyan": "#0fa8cd",
+  		"brightWhite": "#e5e5e5",
+  		"background": "#262a33",
+  		"foreground": "#e5e5e5"
+		}
+	       ],
 
     // Add custom actions and keybindings to this array.
     // To unbind a key combination from your defaults.json, set the command to "unbound".
